#
# Copyright (C) 2009 Ziyan Zhou <zhou@ziyan.info>
# Visit http://ziyan.info/tag/ritcg2/ for more information
#
# This file is part of Raytracer.
#
# Raytracer is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Raytracer is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Raytracer.  If not, see <http://www.gnu.org/licenses/>.
#

AC_INIT(raytracer,0.1)
AM_INIT_AUTOMAKE(raytracer,0.1)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_CONFIG_HEADERS(config.h)
AC_OUTPUT(Makefile)

